--- a/src/Css/navbar.css
+++ b/src/Css/navbar.css
@@ -37,7 +37,7 @@
 }
 .navbar__items {
   display: flex;
-  flex-grow: 1;
+  min-width: 500px;
   justify-content: space-around;
 }
 .navbar__items > *{
@@ -99,8 +99,7 @@
   }
 }
 
-/* Media Queries */
-
+/* MEDIA QUERIES */
 @media (max-width: 1200px) {
   .logo_img {
     width: 50px;
@@ -111,9 +110,18 @@
   .navbar__link{
       font-size: 15px;
   }
+  .navbar__items{
+    min-width: 200px;
+  }
 }
 
 @media (max-width: 768px){
+  .navbar__items{
+    min-width: 200px;
+  }
+  .navbar__content{
+    justify-content: center;
+  }
     .logo_img{
         display: none;
     }
@@ -121,3 +129,4 @@
         font-size: 10px;
     }
 }
+
